--- a/Algorithm/CMakeLists.txt
+++ b/Algorithm/CMakeLists.txt
@@ -3,4 +3,11 @@ project(Algorithm)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Algorithm main.cpp BigInteger.cpp BigInteger.h)
+add_executable(main main.cpp dataStructure/Vector.h dataStructure/Vector.cpp)
+
+file(GLOB files dataStructure_tests/*.cpp)
+foreach (file ${files})
+    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
+    add_executable(${exe} ${file})
+    message(\ \ \ \ --\ src/${exe}.cpp\ will\ be\ compiled\ to\ bin/${exe})
+endforeach ()
