Tic Tac Toe board

--- a/Algorithm/CMakeLists.txt
+++ b/Algorithm/CMakeLists.txt
@@ -8,6 +8,6 @@ add_executable(main tests/BigIntTEst.cpp)
 file(GLOB_RECURSE files *.cpp)
 foreach (file ${files})
     string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
-    add_executable(${exe} ${file} dataStructure/entity/GameEntry.cpp dataStructure/entity/Scores.cpp dataStructure/entity/Scores.h dataStructure/entity/IndexOutOfBounds.cpp dataStructure/entity/IndexOutOfBounds.h)
+    add_executable(${exe} ${file} dataStructure/entity/GameEntry.cpp dataStructure/entity/Scores.cpp dataStructure/entity/Scores.h dataStructure/entity/IndexOutOfBounds.cpp dataStructure/entity/IndexOutOfBounds.h dataStructure/entity/Board.cpp dataStructure/entity/Board.h)
     message(\ \ \ \ --\ src/${exe}.cpp\ will\ be\ compiled\ to\ bin/${exe})
 endforeach ()
