move codeingInterviewGuide dir to Interview dir and add AI_for_Humans dir

--- a/MachineLearning/AI_For_Humans/AI_For_Humans/AI_For_Humans.vcxproj
+++ b/MachineLearning/AI_For_Humans/AI_For_Humans/AI_For_Humans.vcxproj
@@ -111,6 +111,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Matrix.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Matrix.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
