split src, head, and test dir works

--- a/Math/LinearAlgebra/CMakeLists.txt
+++ b/Math/LinearAlgebra/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(LinearAlgebra VERSION 1.0)
+project(LinearAlgebra )
+
+include_directories(include)
+add_subdirectory(src)  
 
 set(CMAKE_CXX_STANDARD 11)
 
@@ -13,30 +16,19 @@ FetchContent_Declare(
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
-list(APPEND EXTRA_LIBS "${PROJECT_SOURCE_DIR}/header")
-list(APPEND EXTRA_INCLUDES "${PROJECT_SOURCE_DIR}/header")
-
-list(APPEND EXTRA_LIBS "${PROJECT_SOURCE_DIR}/src")
-list(APPEND EXTRA_INCLUDES "${PROJECT_SOURCE_DIR}/src")
-
-list(APPEND EXTRA_LIBS "${PROJECT_SOURCE_DIR}/test")
-list(APPEND EXTRA_INCLUDES "${PROJECT_SOURCE_DIR}/test")
-
 enable_testing()
 
 add_executable(
   hello_test
   test/hello_test.cc
-  ${EXTRA_LIBS}
 )
+
 target_link_libraries(
   hello_test
   gtest_main
-  ${EXTRA_LIBS}
+  LA_LIB
 )
+
 
 include(GoogleTest)
 gtest_discover_tests(hello_test)
-
-target_include_directories(hello_test PUBLIC "${PROJECT_BINARY_DIR}" ${EXTRA_INCLUDES})
-target_include_directories(hello_test PUBLIC "${PROJECT_BINARY_DIR}")
