--- a/BigData/flink/build.gradle
+++ b/BigData/flink/build.gradle
@@ -13,12 +13,18 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
+
+    // https://mvnrepository.com/artifact/org.apache.flink/flink-java
+    implementation group: 'org.apache.flink', name: 'flink-java', version: '1.14.3'
     // https://mvnrepository.com/artifact/org.apache.flink/flink-core
-    compileOnly group: 'org.apache.flink', name: 'flink-core', version: '1.13.5'
+    compileOnly group: 'org.apache.flink', name: 'flink-core', version: '1.14.3'
     // https://mvnrepository.com/artifact/org.apache.flink/flink-streaming-java
     compileOnly group: 'org.apache.flink', name: 'flink-streaming-java_2.12', version: '1.14.3'
     // https://mvnrepository.com/artifact/org.apache.flink/flink-connector-kafka
     implementation group: 'org.apache.flink', name: 'flink-connector-kafka_2.12', version: '1.14.3'
+    // https://mvnrepository.com/artifact/org.apache.flink/flink-clients
+    implementation group: 'org.apache.flink', name: 'flink-clients_2.12', version: '1.14.3'
+
 
     // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.1'
