--- a/BigData/odw/gradle.properties
+++ b/BigData/odw/gradle.properties
@@ -1,3 +1,4 @@
 kotlin.code.style=official
-kotlin.code.style=official
-kotlin.code.style=official
+poiVersion=5.2.0
+flinkVersion=1.14.3
+scalaVersion=2.12
