--- a/BigData/flink/build.gradle
+++ b/BigData/flink/build.gradle
@@ -13,6 +13,9 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
+
 
     // https://mvnrepository.com/artifact/org.apache.flink/flink-java
     implementation group: 'org.apache.flink', name: 'flink-java', version: '1.14.3'
