--- a/BigData/odw/build.gradle
+++ b/BigData/odw/build.gradle
@@ -1,11 +1,43 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.5.10'
+    id 'org.jetbrains.kotlin.jvm' version '1.6.10'
     id 'java'
+    // format code
+    id 'com.diffplug.spotless' version '6.3.0' apply false
+    // build fat/uber JARs apply file transforms, and relocate packages for application and libraries
+    id 'com.github.johnrengelman.shadow' version '7.1.2' apply false
 }
 
+description("Flink online datawarehouse")
 
-group 'com.proffl'
-version '1.0-SNAPSHOT'
+allprojects {
+    group 'com.proffl'
+    version '1.0-SNAPSHOT'
+
+    apply plugin: 'com.diffplug.spotless'
+
+    spotless {
+        format 'misc', {
+            target '*.gradle', '*.md', '.gitignore'
+
+            trimTrailingWhitespace()
+            indentWithSpaces(4)
+            endWithNewline()
+        }
+        kotlin {
+            // by default the target is every '.kt' and '.kts` file in the java sourcesets
+            ktfmt()    // has its own section below
+            ktlint()   // has its own section below
+            diktat()   // has its own section below
+            prettier() // has its own section below
+            licenseHeader '/* (C)$YEAR */' // or licenseHeaderFile
+        }
+        kotlinGradle {
+            target '*.gradle.kts' // default target for kotlinGradle
+            ktlint() // or ktfmt() or prettier()
+        }
+    }
+}
+
 
 repositories {
     mavenCentral()
@@ -26,8 +58,8 @@ dependencies {
 
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
 test {
