--- a/BigData/flink/src/main/resources/log4j2.properties
+++ b/BigData/flink/src/main/resources/log4j2.properties
@@ -6,5 +6,5 @@ appender.console.layout.pattern=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %ms
 logger.console.name=org.apache.flink.fs.s3base.shaded.com.amazonaws.latency
 logger.console.level=WARN
 
-rootLogger.level=INFO
+rootLogger.level=WARN
 rootLogger.appenderRef.console.ref=STDOUT
