--- a/Interview/Codeforces/CMakeLists.txt
+++ b/Interview/Codeforces/CMakeLists.txt
@@ -26,3 +26,25 @@ foreach (file ${files})
     message(\ \ \ \ --\ ${exe}.cpp\ will\ be\ added\ to\ ${LA_SRC_FILES})
 endforeach ()
 
+file(GLOB_RECURSE files "${PROJECT_SOURCE_DIR}/stateMachine/*.cpp")
+foreach (file ${files})
+    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
+    list(APPEND LA_SRC_FILES "src/${exe}.cpp")
+    add_executable(
+            ${exe}
+            "stateMachine/${exe}.cpp"
+    )
+    message(\ \ \ \ --\ ${exe}.cpp\ will\ be\ added\ to\ ${LA_SRC_FILES})
+endforeach ()
+
+file(GLOB_RECURSE files "${PROJECT_SOURCE_DIR}/sorting/*.cpp")
+foreach (file ${files})
+    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
+    list(APPEND LA_SRC_FILES "src/${exe}.cpp")
+    add_executable(
+            ${exe}
+            "sorting/${exe}.cpp"
+    )
+    message(\ \ \ \ --\ ${exe}.cpp\ will\ be\ added\ to\ ${LA_SRC_FILES})
+endforeach ()
+
