--- a/Interview/Codeforces/CMakeLists.txt
+++ b/Interview/Codeforces/CMakeLists.txt
@@ -63,3 +63,14 @@ foreach (file ${files})
     )
     message(\ \ \ \ --\ ${exe}.cpp\ will\ be\ added\ to\ ${LA_SRC_FILES})
 endforeach ()
+
+file(GLOB_RECURSE files "${PROJECT_SOURCE_DIR}/dp/*.cpp")
+foreach (file ${files})
+    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
+    list(APPEND LA_SRC_FILES "src/${exe}.cpp")
+    add_executable(
+            ${exe}
+            "dp/${exe}.cpp"
+    )
+    message(\ \ \ \ --\ ${exe}.cpp\ will\ be\ added\ to\ ${LA_SRC_FILES})
+endforeach ()
