--- a/BigData/kafka_tutorial/build.gradle
+++ b/BigData/kafka_tutorial/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.5.10'
     id 'java'
+
+    id 'com.commercehub.gradle.plugin.avro' version '0.9.1'
 }
 
 ext {
