--- a/Interview/Codeforces/CMakeLists.txt
+++ b/Interview/Codeforces/CMakeLists.txt
@@ -8,6 +8,19 @@ add_executable(
         "inputGenerator.cpp"
 )
 
+
+file(GLOB_RECURSE files "${PROJECT_SOURCE_DIR}/heap/*.cpp")
+foreach (file ${files})
+    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
+    list(APPEND LA_SRC_FILES "src/heap_${exe}.cpp")
+    add_executable(
+            heap_${exe}
+            "heap/${exe}.cpp"
+    )
+    message(\ \ \ \ --\ ${exe}.cpp\ will\ be\ added\ to\ ${LA_SRC_FILES})
+endforeach ()
+
+
 file(GLOB_RECURSE files "${PROJECT_SOURCE_DIR}/strings/*.cpp")
 foreach (file ${files})
     string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
