--- a/BigData/odw/build.gradle
+++ b/BigData/odw/build.gradle
@@ -51,6 +51,14 @@ subprojects {
     }
 
     dependencies {
+        // https://mvnrepository.com/artifact/org.apache.poi/poi
+        implementation group: 'org.apache.poi', name: 'poi', version: poiVersion
+        // https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
+        implementation group: 'org.apache.poi', name: 'poi-ooxml', version: poiVersion
+
+        // https://mvnrepository.com/artifact/org.hibernate/hibernate-core
+        implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.5.Final'
+
         // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
         implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
         // https://mvnrepository.com/artifact/org.apache.flink/flink-java
