--- a/BigData/odw/build.gradle
+++ b/BigData/odw/build.gradle
@@ -58,6 +58,7 @@ subprojects {
 
         // https://mvnrepository.com/artifact/org.hibernate/hibernate-core
         implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.5.Final'
+        implementation("mysql:mysql-connector-java:8.0.28")
 
         // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
         implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
