--- a/Algorithm/dataStructure/CMakeLists.txt
+++ b/Algorithm/dataStructure/CMakeLists.txt
@@ -8,14 +8,26 @@ include_directories(include)
 
 set (DS_SRC_FILES "")
 
-file(GLOB_RECURSE files "${PROJECT_SOURCE_DIR}/src/*.cpp")
+file(GLOB_RECURSE files "${PROJECT_SOURCE_DIR}/src/entity/*.cpp")
 foreach (file ${files})
     string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
-    list(APPEND DS_SRC_FILES "src/${exe}.cpp")
+    list(APPEND DS_SRC_FILES "src/entity/${exe}.cpp")
     message(\ \ \ \ --\ ${exe}.cpp\ will\ be\ added\ to\ ${DS_SRC_FILES})
 endforeach ()
 
 add_library(DS_LIB ${DS_SRC_FILES})
+
+file(GLOB_RECURSE files "${PROJECT_SOURCE_DIR}/app/*.cpp")
+foreach (file ${files})
+    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
+    list(APPEND DS_SRC_FILES "src/app_${exe}.cpp")
+    add_executable(
+            app_${exe}
+            "app/${exe}.cpp"
+    )
+    message(\ \ \ \ --\ app_${exe}.cpp\ will\ be\ added\ to\ ${DS_SRC_FILES})
+endforeach ()
+
 
 include(FetchContent)
 FetchContent_Declare(
